refractor：refactor: 重构知识库模块，提取文件操作公共逻辑并使用MapStruct优化bean转换
主要变更：
1. 提取文件验证公共逻辑
   - 创建 FileValidationService 统一处理文件验证
   - 重构 KnowledgeBaseUploadService 和 ResumeUploadService 使用统一验证服务
   - 减少重复代码，提高可维护性

2. 使用MapStruct替代手动bean转换
   - 创建 KnowledgeBaseMapper 和 RagChatMapper 接口
   - 重构 KnowledgeBaseListService 和 RagChatSessionService 使用MapStruct
   - 移除 DTO 中的手动 fromEntity 方法
   - 减少约80+行手动转换代码，提升性能和类型安全

3. 代码优化
   - 修复 MapStruct 编译错误（Set到Collection的转换）
   - 统一使用 .toList() 替代 Collectors.toList()
   - 清理未使用的导入和方法